force-app/main/default/objects/DMAPP__Account_Political_Map__c/DMAPP__Account_Political_Map__c.object-meta.xml
<CustomObject>
    <label>Account Relationship Map</label>
    <nameField>
        <label>Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Relationship Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>