force-app/main/default/objects/DMAPP__Account_Political_Map__c/fields/DMAPP__Account__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Political_Maps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>