force-app/main/default/objects/DMAPP__Account_Political_Map__c/fields/DMAPP__Mentor_Count__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Mentor_Count__c</fullName>
    <label>Mentor Count</label>
    <summaryFilterItems>
        <field>DMAPP__Account_Political_Map_Contact__c.DMAPP__Status__c</field>
        <operation>equals</operation>
        <value>Mentor</value>
    </summaryFilterItems>
    <summaryForeignKey>DMAPP__Account_Political_Map_Contact__c.DMAPP__Political_Map__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>