force-app/main/default/objects/DMAPP__Account_Political_Map__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Relationship_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>